--- a/rest-api-with-spring/src/main/resources/application.properties
+++ b/rest-api-with-spring/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 spring.jackson.deserialization.fail-on-unknown-properties=true
 
-spring.datasource.username=postgres
-spring.datasource.password=pass
-spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
-spring.datasource.driver-class-name=org.postgresql.Driver
+#spring.datasource.username=postgres
+#spring.datasource.password=pass
+#spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+#spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
